--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "@fontsource/varela-round": "^5.0.8",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@mui/system": "^5.14.18",
     "@primer/octicons": "^19.8.0",
     "@primer/react": "^36.2.0",
     "@react-buddy/ide-toolbox": "^2.4.0",
     "@react-buddy/palette-mui": "^5.0.1",
+    "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
